<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".NewsitemActivity"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tooolbar_colaps"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp">


            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/card" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0">
                <FrameLayout
                        android:layout_width="match_parent"

                        android:layout_height="200dp">


                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_collapseMode="parallax"
                            android:fitsSystemWindows="true"



                            android:id="@+id/image_description"


                            android:focusable="auto"
                            android:scaleType="centerCrop"


                            android:adjustViewBounds="false"
                            android:cropToPadding="true"/>

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_collapseMode="parallax"
                            android:scaleType="centerCrop"

                            android:background="@drawable/gradient_shadow"/>

                    <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"

                            android:clickable="true"
                            android:textAlignment="center"
                            android:layout_margin="10dp"


                            android:id="@+id/addtoFavorite"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:fontFamily="@font/poppins_semibold"
                            android:drawableBottom="@drawable/ic_baseline_favorite_24"
                            android:background="@color/colar">

                    </androidx.appcompat.widget.AppCompatButton>

                    <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="30dp"
                            android:layout_height="30dp"

                            android:clickable="true"
                            android:layout_margin="10dp"
                            android:layout_gravity="end"


                            android:id="@+id/download"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:fontFamily="@font/poppins_semibold"
                            android:drawableBottom="@drawable/ic_baseline_cloud_download_24"
                            android:background="@color/colar">

                    </androidx.appcompat.widget.AppCompatButton>


                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:orientation="horizontal">

                        <TextView android:layout_width="wrap_content"
                                  android:layout_height="match_parent"

                                  android:text="@string/dummy_data"
                                  android:textSize="16sp"
                                  android:padding="10dp"
                                  android:layout_marginStart="20dp"
                                  android:fontFamily="@font/poppins_semibold"
                                  android:shadowColor="@color/white"
                                  android:shadowDx="1"
                                  android:shadowDy="1"
                                  android:shadowRadius="2"
                                  android:maxLength="20"
                                  android:textAllCaps="true"
                                  android:ellipsize="end"


                                  android:textColor="@color/cardview_light_background"
                                  android:id="@+id/author_article">

                        </TextView>
                        <TextView android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:gravity="end"

                                  android:text="@string/politics_topic"
                                  android:textSize="19sp"
                                  android:padding="10dp"
                                  android:layout_marginStart="20dp"
                                  android:fontFamily="@font/poppins_semibold"

                                  android:shadowColor="@color/white"
                                  android:shadowDx="1"
                                  android:shadowDy="1"
                                  android:shadowRadius="2"

                                  android:textColor="@color/cardview_light_background"
                                  android:id="@+id/date">

                        </TextView>

                    </LinearLayout>
                    <androidx.appcompat.widget.Toolbar
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            app:layout_collapseMode="parallax">

                    </androidx.appcompat.widget.Toolbar>


                </FrameLayout>


            </androidx.cardview.widget.CardView>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/title"
                      android:textAlignment="center"
                      android:layout_margin="10dp"

                      android:id="@+id/title_article"
                      android:textAppearance="@style/TextAppearance.AppCompat.Title"
                      android:fontFamily="@font/poppins_semibold">

            </TextView>
            <androidx.appcompat.widget.AppCompatTextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/poppins_semibold"
                     android:textSize="14sp"
                     android:layout_margin="10dp"

                     android:id="@+id/article_description">

            </androidx.appcompat.widget.AppCompatTextView>

            <WebView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp"

                      android:id="@+id/webview">

            </WebView>

            <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:text="@string/read_more"
                      android:textAlignment="center"
                      android:layout_margin="10dp"
                      android:outlineAmbientShadowColor="@color/colar"
                    android:clickable="true"


                      android:id="@+id/read_more"
                      android:textAppearance="@style/TextAppearance.AppCompat.Title"
                      android:fontFamily="@font/poppins_semibold">

            </androidx.appcompat.widget.AppCompatButton>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>